--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+async-trait = "0.1.57"
+tokio = { version = "1.21.2", features = ["full"] }
+uuid = { version = "1.2.1", features = ["v4"] }
+
+[dev-dependencies]
+test-context = "0.1.4"
