--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 async-trait = "0.1.57"
+axum = "0.5.17"
 tokio = { version = "1.21.2", features = ["full"] }
 uuid = { version = "1.2.1", features = ["v4"] }
 
