--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,9 +9,9 @@ edition = "2021"
 async-trait = "0.1.57"
 axum = "0.5.17"
 dotenv = "0.15.0"
-env_logger = "0.9.3"
-log = "0.4.17"
 tokio = { version = "1.21.2", features = ["full"] }
+tracing = "0.1.37"
+tracing-subscriber = "0.3.16"
 uuid = { version = "1.2.1", features = ["v4"] }
 
 [dev-dependencies]
