--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,8 @@ async-trait = "0.1.57"
 axum = "0.5.17"
 dotenv = "0.15.0"
 tokio = { version = "1.21.2", features = ["full"] }
+tower = { version = "0.4.13", features = ["timeout"] }
+tower-http = { version = "0.3.4", features = ["trace"] }
 tracing = "0.1.37"
 tracing-subscriber = "0.3.16"
 uuid = { version = "1.2.1", features = ["v4"] }
