--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ tower = { version = "0.4.13", features = ["timeout"] }
 tower-http = { version = "0.3.4", features = ["trace"] }
 tracing = "0.1.37"
 tracing-subscriber = "0.3.16"
-uuid = { version = "1.2.1", features = ["v4"] }
+uuid = { version = "1.2.1", features = ["v4", "serde"] }
 
 [dev-dependencies]
 test-context = "0.1.4"
