--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ edition = "2021"
 async-trait = "0.1.57"
 axum = "0.5.17"
 dotenv = "0.15.0"
+serde = { version = "1.0.147", features = ["derive"] }
+serde_json = "1.0.87"
 tokio = { version = "1.21.2", features = ["full"] }
 tower = { version = "0.4.13", features = ["timeout"] }
 tower-http = { version = "0.3.4", features = ["trace"] }
