--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 async-trait = "0.1.57"
 axum = "0.5.17"
 dotenv = "0.15.0"
+mongodb = "2.3.1"
 serde = { version = "1.0.147", features = ["derive"] }
 serde_json = "1.0.87"
 tokio = { version = "1.21.2", features = ["full"] }
