--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 async-trait = "0.1.63"
+axum = "0.6.4"
 tokio = { version = "1.24.2", features = ["full"] }
 uuid = { version = "1.2.2", features = ["v4"] }
 
