--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 async-trait = "0.1.63"
 axum = "0.6.4"
+dotenv = "0.15.0"
 tokio = { version = "1.24.2", features = ["full"] }
 uuid = { version = "1.2.2", features = ["v4"] }
 
