--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,9 +9,9 @@ edition = "2021"
 async-trait = "0.1.63"
 axum = "0.6.4"
 dotenv = "0.15.0"
-env_logger = "0.10.0"
-log = "0.4.17"
 tokio = { version = "1.24.2", features = ["full"] }
+tracing = "0.1.37"
+tracing-subscriber = "0.3.16"
 uuid = { version = "1.2.2", features = ["v4"] }
 
 [dev-dependencies]
