--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ edition = "2021"
 async-trait = "0.1.63"
 axum = "0.6.4"
 dotenv = "0.15.0"
+serde = { version = "1.0.152", features = ["derive"] }
+serde_json = "1.0.92"
 tokio = { version = "1.24.2", features = ["full"] }
 tower = { version = "0.4.13", features = ["timeout"] }
 tower-http = { version = "0.3.5", features = ["trace"] }
