--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 async-trait = "0.1.63"
-axum = "0.6.4"
+axum = { version = "0.6.4", features = ["macros"] }
 dotenv = "0.15.0"
 serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.92"
