--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 async-trait = "0.1.63"
 axum = { version = "0.6.4", features = ["macros"] }
 dotenv = "0.15.0"
+mongodb = "2.3.1"
 serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.92"
 tokio = { version = "1.24.2", features = ["full"] }
